--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </div>
       </div>
       <div class = "row">
-         <div class = "col-med-2">
+         <div class = "col-sm-2">
             <div class="card">
                <div class="card-header bg-success text-white">Select Test Subject ID No.</div>
                <select id="selSubject"></select>
@@ -32,22 +32,20 @@
             </div>
          </div>
 
-         <div class = "col-med-5">
+         <div class = "col-sm-5">
             <div id="barChart"></div>
          </div>
 
-         <div class = "col-med-5">
-            <div class = "card border-success">
+         <div class = "col-sm-5">
                <div id="washGuage"></div>
-            </div>
          </div>
       </div>
 
-   <div class="row">
-      <div class="col">
-         <div id="bubbleChart"></div>
+      <div class="row">
+         <div class="col">
+            <div id="bubbleChart"></div>
+         </div>
       </div>
-   </div>
    <script src="https://d3js.org/d3.v5.min.js"></script>
    <script src="samples.json"></script>
    <script src="static/js/app.js"></script>
