--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <div class = "row">
          <div class = "col-md-12 jumbotron text-center">
             <h1 class="display-4">Bellybutton Biodiversity Dashboard</h1>
-            <p>Select a test subject from the dropdown menu or press Random below</p>
+            <p>Select a test subject from the dropdown menu</p>
             <hr>
-            <button class="btn btn-success" id="randomButton">Random</button>
          </div>
       </div>
       <div class = "row">
-         <div class = "col-sm-2">
+         <div class = "col-md-3">
             <div class="card">
                <div class="card-header bg-success text-white">Select Test Subject ID No.</div>
                <select id="selSubject"></select>
@@ -32,11 +31,13 @@
             </div>
          </div>
 
-         <div class = "col-sm-5">
+         <div class = "col-md-9">
             <div id="barChart"></div>
          </div>
+      </div>
 
-         <div class = "col-sm-5">
+      <div class ="row justify-content-center">
+         <div class = "col-md-4 .offset-md-3">
                <div id="washGuage"></div>
          </div>
       </div>
